# 2d-physics-opengl

./: CMakeLists.txt  light_propogation.cpp
src/: 1d_fall.cpp  2d_graph.cpp  2d_traj.cpp  3d_gaussian.cpp  circle_google.cpp  complex_plot.cpp  cube.cpp  gyroscope.cpp  main.cpp  simple_pendulum.cpp
